--- a/stomp/src/main/resources/application.yaml
+++ b/stomp/src/main/resources/application.yaml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/stomp
-    username: woong
-    password: Jhan00254!
+    url: jdbc:mysql://localhost:3306/stomp?useSSL=false&useUnicode=true&characterEncoding=utf8
+    username: root
+    password:
   jpa:
     show-sql: true
     hibernate:
