--- a/stomp/src/main/resources/application.yaml
+++ b/stomp/src/main/resources/application.yaml
@@ -3,7 +3,10 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/stomp?useSSL=false&useUnicode=true&characterEncoding=utf8
     username: root
-    password:
+    # mac
+    password: Jhan00254!
+    # window
+    # password :
   jpa:
     show-sql: true
     hibernate:
