--- a/stomp/src/main/resources/application.yaml
+++ b/stomp/src/main/resources/application.yaml
@@ -4,9 +4,9 @@ spring:
     url: jdbc:mysql://localhost:3306/stomp?useSSL=false&useUnicode=true&characterEncoding=utf8
     username: root
     # mac
-    password: Jhan00254!
+    #    password: Jhan00254!
     # window
-  #    password:
+    password:
   jpa:
     show-sql: true
     hibernate:
