--- a/stomp/build.gradle
+++ b/stomp/build.gradle
@@ -1,9 +1,3 @@
-//buildscript {
-//    ext {
-//        queryDslVersion = "5.0.0"
-//    }
-//}
-
 plugins {
     id 'java'
     id 'org.springframework.boot' version '3.0.1'
@@ -52,23 +46,22 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 
-//이놈
 def querydslDir = "$buildDir/generated/querydsl"
 
-querydsl { //이놈
+querydsl {
     jpa = true
     querydslSourcesDir = querydslDir
 }
 
-sourceSets { //이놈
+sourceSets {
     main.java.srcDir querydslDir
 }
 
-configurations { // 이놈
+configurations {
     querydsl.extendsFrom compileClasspath
 }
 
-compileQuerydsl { // 이놈
+compileQuerydsl {
     options.annotationProcessorPath = configurations.querydsl
 }
 
